<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ItemDetailFragment">

    <include
        android:id="@+id/tool_bar"
        layout="@layout/tool_bar"
        android:visibility="gone" />

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/details_card"
        android:layout_height="@dimen/details_card"
        android:layout_gravity="center_horizontal"
        android:innerRadius="@dimen/radius_0"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="@dimen/card_radius_detail_view_80"
        app:elevation="@dimen/card_elevation_12">

        <ImageView
            android:id="@+id/img_person_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_person"/>
    </android.support.v7.widget.CardView>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/person_name_text_input_layout"
        android:layout_marginTop="@dimen/margin_10">

        <EditText
            android:id="@+id/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/person_name"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_16" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/company_name_text_input_layout"
        android:layout_marginTop="@dimen/margin_10">

        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
            android:gravity="center"
            android:hint="@string/company_name"
            android:inputType="textPersonName"
            android:padding="@dimen/padding_16" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/done_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_margin="@dimen/margin_10"
        android:text="@string/save"
        android:visibility="gone" />
</LinearLayout>