<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="@dimen/margin_5"
    android:layout_marginTop="@dimen/margin_5"
    android:background="@color/card_background_color"
    android:orientation="horizontal"
    android:padding="@dimen/padding_5">

    <android.support.v7.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="@dimen/img_size_recycler_100"
        android:layout_height="@dimen/img_size_recycler_100"
        android:innerRadius="@dimen/radius_0"
        android:padding="@dimen/padding_10"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="@dimen/radius_50"
        app:elevation="@dimen/card_elevation_12">

        <ImageView
            android:id="@+id/img_person_pic"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/ic_launcher"/>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@+id/card_view"
        android:layout_toRightOf="@+id/card_view"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_10"
            android:layout_marginRight="@dimen/margin_10"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/person_name"
            android:textSize="@dimen/text_size_24"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_10"
            android:gravity="center"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/company_name"
            android:textSize="@dimen/text_size_24" />
    </LinearLayout>
</RelativeLayout>